src/test/deca/codegen/valid/improvided/convfloat.deca
// Description:
// test convfloat
// Resultat:
// 2.0
{
 int r = 2; 
 float x = r;
 print(x);

}
