src/test/deca/codegen/invalid/improvided/objetNonInstancie.deca
class A {
    int x;
}

{
    A a;
    print(a.x);
}
